# ChangeLog for media-sound/alsa-firmware
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.54 2007/02/11 23:33:44 blubb Exp $

  11 Feb 2007; Simon Stelling <blubb@gentoo.org>
  alsa-firmware-1.0.14_rc1.ebuild:
  stable on amd64; bug 158678

*alsa-firmware-1.0.14_rc2 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-firmware-1.0.14_rc2.ebuild:
  Version bump.

  14 Jan 2007; Joseph Jezak <josejx@gentoo.org>
  alsa-firmware-1.0.14_rc1.ebuild:
  Marked ppc stable for bug #158678.

  09 Jan 2007; Markus Rothe <corsair@gentoo.org>
  alsa-firmware-1.0.14_rc1.ebuild:
  Stable on ppc64; bug #158678

  04 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  alsa-firmware-1.0.14_rc1.ebuild:
  Stable on sparc wrt #158678

  04 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  alsa-firmware-1.0.14_rc1.ebuild:
  stable x86, bug #158678

  21 Dec 2006; Bryan Østergaard <kloeri@gentoo.org>
  alsa-firmware-1.0.13.ebuild:
  Stable on IA64.

  21 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -alsa-firmware-1.0.8-r1.ebuild, -alsa-firmware-1.0.10.ebuild,
  -alsa-firmware-1.0.11.ebuild:
  Winter cleaning, so to let arch teams know that they need to hurry up on
  cleaning after themselves.

*alsa-firmware-1.0.14_rc1 (11 Dec 2006)

  11 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-firmware-1.0.14_rc1.ebuild:
  Version bump.

  13 Nov 2006; Joseph Jezak <josejx@gentoo.org> alsa-firmware-1.0.13.ebuild:
  Marked ppc stable.

  25 Oct 2006; Joshua Jackson <tsunam@gentoo.org>
  alsa-firmware-1.0.13.ebuild:
  Stable x86; bug #150540

  24 Oct 2006; Simon Stelling <blubb@gentoo.org>
  alsa-firmware-1.0.13.ebuild:
  stable on amd64

  22 Oct 2006; Markus Rothe <corsair@gentoo.org>
  alsa-firmware-1.0.13.ebuild:
  Stable on ppc64; bug #150540

  20 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  alsa-firmware-1.0.13.ebuild:
  Stable on sparc wrt #150540
