@@ -1,0 +1,3 @@
+MD5 98afcd48e4fc9bcf5e43276a9a81cb7f alsa-firmware-1.0.14rc2.tar.bz2 3084253
+RMD160 2971c1a310d667d2459d40d223b6b52b45da026d alsa-firmware-1.0.14rc2.tar.bz2 3084253
+SHA256 75b6b2894f4cdacea1c1898f370ffe11fdfe43a9625860d7205a517bd85e4994 alsa-firmware-1.0.14rc2.tar.bz2 3084253
