@@ -1,6 +1,16 @@
 # ChangeLog for media-sound/alsa-firmware
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.54 2007/02/11 23:33:44 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.55 2007/02/17 02:12:01 flameeyes Exp $
+
+*alsa-firmware-1.0.14_rc2-r1 (17 Feb 2007)
+
+  17 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
+  +files/52-usx2yaudio.rules, +alsa-firmware-1.0.14_rc2-r1.ebuild:
+  Use ALSA_CARDS variable to decide to install or not a series of firmwares;
+  by doing this, we can also tweak the runtime dependency so that people
+  asking for hdsp/hdspm will get alsa-tools (needed for hdsploader) and people
+  asking for usb-usx2y will get fxload. Thanks to Risto A. Paju and Matthias
+  Schwarzott (zzam) in bug #163414.
 
   11 Feb 2007; Simon Stelling <blubb@gentoo.org>
   alsa-firmware-1.0.14_rc1.ebuild:
